# nodetool-elevenlabs

./: pyproject.toml
src/nodetool/dsl/elevenlabs/: text_to_speech.py
src/nodetool/nodes/elevenlabs/: speech_to_text.py  text_to_speech.py
src/nodetool/package_metadata/: nodetool-elevenlabs.json
