[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-elevenlabs"
version = "0.1.0"
description = "Nodetool ElevenLabs nodes"
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true
include = ["src/nodetool/package_metadata/nodetool-elevenlabs.json"]
repository = "https://github.com/nodetool-ai/nodetool-elevenlabs"

[tool.poetry.dependencies]
python = "^3.10"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
elevenlabs = "*"
