[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-elevenlabs"
version = "0.6.3-rc.8"
description = "Nodetool ElevenLabs nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = ["nodetool-core==0.6.3-rc.8", "elevenlabs"]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.3-rc.8"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = ["src/nodetool/package_metadata/nodetool-elevenlabs.json", "package_metadata/nodetool-elevenlabs.json"]
